--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.8.4",
     "cheerio": "^1.0.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
